// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Test: Heading Level Four 1`] = `
<div>
  <h4
    class="css-1eiceoa-Heading"
  >
    Heading Level One
  </h4>
</div>
`;

exports[`Snapshot Test: Heading Level One 1`] = `
<div>
  <h1
    class="css-1eiceoa-Heading"
  >
    Heading Level One
  </h1>
</div>
`;

exports[`Snapshot Test: Heading Level Three 1`] = `
<div>
  <h3
    class="css-1eiceoa-Heading"
  >
    Heading Level One
  </h3>
</div>
`;

exports[`Snapshot Test: Heading Level Two 1`] = `
<div>
  <h2
    class="css-1eiceoa-Heading"
  >
    Heading Level One
  </h2>
</div>
`;
